# GuitarChannelizerMidiFx

./: .gitignore  CMakeLists.txt  README.md
Source/: GuitarFingering.cpp  GuitarFingering.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
